--- a/myapp/blog/templates/blog/index.html
+++ b/myapp/blog/templates/blog/index.html
@@ -1,35 +1,11 @@
-{% load static %}
+{% extends "blog/base.html" %}
 
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{%static 'blog/style.css'%} ">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-</head>
-<body >
-    <header class="p-3 bg-dark text-white">
-        <div class="row">
-            <div class="col">
-                <h3>Blog</h3>
-            </div>
-            <div class="col">
-                <div class="d-flex justify-content-center gap-3">
-                    <a class="text-light text-decoration-none" href="">Home</a>
-                    <a class="text-light text-decoration-none" href="">About</a>
-                    <a class="text-light text-decoration-none" href="">Contact</a>
-                </div>
-            </div>
-        </div>
-    </header>
     <div class="container-fluid ">
         <div class="row my-2">
             <div class="col">
-                <h2 >Latest Posts</h2>
+                <h2 >{{ blog_title }}</h2>
             </div>
             <div class="col-3">
                 <div class="input-group">
@@ -189,11 +165,5 @@
         </div>
         
     </div>
-    <footer class="bg-dark text-light p-3">
-        <div class="col-4 d-flex justify-content-center align-items-center">
-          <span class="text-light">© 2021 Company, Inc</span>
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
+    
