--- a/myapp/blog/templates/blog/index.html
+++ b/myapp/blog/templates/blog/index.html
@@ -16,8 +16,13 @@
                   </div>
             </div>
         </div>
+
+        
         <div class="row m-3">
-            <div class="col-4 mb-4">
+            {% if posts %}
+                {%for post in posts %}
+                        
+                <div class="col-4 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <div class="row">
@@ -25,112 +30,24 @@
                                 <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
                             </div>
                             <div class="col-md-8">
-                                <h5 class="card-title">Post title</h5>
-                                <p class="card-text">Some quick example text for the post's content.</p>
+                                <h5 class="card-title">{{ post.title }}</h5>
+                                <p class="card-text">{{post.content}}</p>
                                 <div class="d-flex justify-content-between">
-                                     <a href="./detail.html">Read More</a>
+                                     {% comment %} <a href="/blog/post/{{post.id}}">Read More</a> {% endcomment %}
+                                     <a href="{% url 'blog:detail' post_id=post.id %}">Read More</a>
                                     <a class="text-decoration-none text-dark fw-bold" href="#">Sports</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <h5 class="card-title">Post title</h5>
-                                <p class="card-text">Some quick example text for the post's content.</p>
-                                <div class="d-flex justify-content-between">
-                                     <a href="./detail.html">Read More</a>
-                                    <a class="text-decoration-none text-dark fw-bold" href="#">Development</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-            </div>
-            <div class="col-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <h5 class="card-title">Post title</h5>
-                                <p class="card-text">Some quick example text for the post's content.</p>
-                                <div class="d-flex justify-content-between">
-                                     <a href="./detail.html">Read More</a>
-                                    <a class="text-decoration-none text-dark fw-bold" href="#">Engineering</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <h5 class="card-title">Post title</h5>
-                                <p class="card-text">Some quick example text for the post's content.</p>
-                                <div class="d-flex justify-content-between">
-                                     <a href="./detail.html">Read More</a>
-                                    <a class="text-decoration-none text-dark fw-bold" href="#">Kids</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <h5 class="card-title">Post title</h5>
-                                <p class="card-text">Some quick example text for the post's content.</p>
-                                <div class="d-flex justify-content-between">
-                                     <a href="./detail.html">Read More</a>
-                                    <a class="text-decoration-none text-dark fw-bold" href="#">Design</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <h5 class="card-title">Post title</h5>
-                                <p class="card-text">Some quick example text for the post's content.</p>
-                                <div class="d-flex justify-content-between">
-                                     <a href="./detail.html">Read More</a>
-                                    <a class="text-decoration-none text-dark fw-bold" href="#">Movies</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                {% endfor %}
+            {% else %}
+                <p>No posts available.</p>
+            {% endif %}
+
+
             <div class="col-12 my-3">
                 <nav aria-label="Page navigation">
                     <ul class="pagination">
